--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1939,7 +1939,7 @@ input, select, textarea {
 
 		#logo h1 {
 			background: #ff4486;
-			color: #fff;
+			color: #0090C5;
 			border-radius: 6px;
 			font-family: 'Oleo Script', serif;
 			font-weight: 400;
