--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1941,7 +1941,7 @@ input, select, textarea {
 			background: #0090C5;
 			color: #fff;
 			border-radius: 6px;
-			font-family: 'arial', serif;
+			font-family: 'monospace', serif;
 			font-weight: 400;
 			padding: 0.25em 0.2em 0.25em 0.2em;
 			font-size: 3em;
